fix: made things less broken on mobile

--- a/public/styles/greentext-generator-styles.css
+++ b/public/styles/greentext-generator-styles.css
@@ -67,6 +67,10 @@ button:active {
     margin-bottom: 0;
 }
 
+h2 {
+    text-align: center;
+}
+
 /* -------- */
 
 .greentext-main {
@@ -90,6 +94,7 @@ button:active {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: flex-end;
 }
 
 .toggle-container p {
@@ -164,6 +169,8 @@ input:checked+.slider:before {
 .slider.round {
     outline-color: var(--toggle-slider);
     outline-style: solid;
+    height: 34px;
+    width: 60px;
 }
 
 /* ----------------------------------------------------- */
@@ -210,6 +217,7 @@ input:checked+.slider:before {
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 10px;
     align-items: center;
     justify-content: space-between;
@@ -639,4 +647,61 @@ hr.rounded {
     border: none;
     border-radius: unset;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 900px) {
+    body {
+        width: 90%;
+    }
+
+    .logo .mobile {
+        width: 60%;
+    }
+
+    #image-settings {
+        grid-template-columns: auto;
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    #image-settings #quote-text {
+        grid-area: 2 / 1;
+    }
+
+    #image-settings .toggle {
+        grid-area: 3 / 1;
+
+    }
+
+    #image-settings .image-picker {
+        grid-area: 4 / 1;
+    }
+
+    
+
+    /*#anonymous-text, #greentext-date, #greentext-random-id {
+        font-size: 14px;
+    }*/
+
+    
+}
+
+
+
+@media only screen and (max-width: 760px) {
+
+    .toggle-container {
+        flex-direction: column;
+    }
+
+    #preview-image {
+        width: fit-content;
+        margin-left: 20px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+
+    .logo .mobile {
+        width: 70%;
+    }
 }
